# flet-build-test

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.py
src/pages/: home.py
