[project]
name = "flet-build-test"
version = "0.1.0"
description = "App to test flet build."
requires-python = ">=3.10"
authors = [{ name = "Appveyor Systems Inc.", email = "hello@flet.dev" }]

dependencies = [
    "flet >=0.80.1",
    "flet-ads >=0.80.1",
    "flet-audio >=0.80.1",
    "flet-audio-recorder >=0.80.1",
    "flet-charts >=0.80.1",
    "flet-datatable2 >=0.80.1",
    "flet-flashlight >=0.80.1",
    "flet-geolocator >=0.80.1",
    "flet-lottie >=0.80.1",
    "flet-map >=0.80.1",
    "flet-permission-handler >=0.80.1",
    "flet-rive >=0.80.1",
    "flet-video >=0.80.1",
    "flet-webview >=0.80.1",
]

[dependency-groups]
dev = [
    "flet[all] >=0.80.1",
]

[tool.uv]
prerelease = "allow"

# Docs: https://docs.flet.dev/publish/
[tool.flet]
org = "com.flet"
product = "flet-build-test"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"
