[project]
name = "flet-build-test"
version = "0.1.0"
description = "App to test flet build."
requires-python = ">=3.10"
authors = [{ name = "Appveyor Systems Inc.", email = "hello@flet.dev" }]

dependencies = [
    "flet >=0.80.1",
]

[tool.flet.android]
dependencies = [
  "pyjnius","android-notify==1.60.6.dev0"
]

[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true

[dependency-groups]
dev = [
    "flet[all] >=0.80.1",
]

[tool.uv]
prerelease = "allow"

# Docs: https://docs.flet.dev/publish/
[tool.flet]
org = "com.flet"
product = "flet-build-test"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"
splash.android = false

[tool.flet.app]
path = "src"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"
